@@ -1,3 +1,7 @@
+2006-08-20  Karl Berry  <karl@gnu.org>
+
+	* hello.c (main): try a new style for the --version output.
+
 2006-07-16  Karl Berry  <karl@gnu.org>
 
 	* system.h: #include "closeout.h".
